# ser_perf

./: .gitignore  CMakeLists.txt  README.rst  plot.py  ser_perf.cpp  ser_perf.sh  ser_perf_worker.cpp  ser_perf_worker.sh
ipc/: CMakeLists.txt  ipc.cpp  ipc.hpp
serialization/: CMakeLists.txt  serialization.cpp  serialization.hpp
